--- a/pathfinder/templates/two-col-left-sidebar.html
+++ b/pathfinder/templates/two-col-left-sidebar.html
@@ -5,20 +5,21 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Thunderbird UI Two-Column Left Sidebar Template</title>
-  <link rel="stylesheet" href="https://cdn.sandia.gov/tui/v3/css/tui.min.css">
+  
+  <!-- removed links that wont work here -->
+  
   <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.sandia.gov/tui/v3/js/jquery.js"></script>
-  <script src="https://cdn.sandia.gov/tui/v3/js/tui.js"></script>
-  <script type="text/javascript" id="includeGlobalHeader"
-          src="https://ui.sandia.gov/snl-global-header/js/snl-global-header.js" data-links="true" data-search="true"
-          data-footer="true" data-cchd="true"></script>
+
+  <!-- removed links that wont work here -->
+
+
   <!-- Thunderbird UI v3.3.0 Template-->
 </head>
 
 <body>
 <!-- SITE HEADER START -->
 <!-- Navigation orientation: Add 'inline' for right aligned inline navigation or 'vertical' for a left vertical navigation format -->
-<!-- Vertical navigation: For implementing the vertical naviation, see the instructions at https://ui.sandia.gov/site-header for how to implement with wrappers -->
+
 <!-- Navigation styling: Add the 'inverted' or 'photo' class to change the navigation styling -->
 <div class="site-header navbar navbar-expand-lg d-block">
   <div class="navbar-header">
@@ -28,7 +29,7 @@
     </button>
     <a href="#" class="navbar-brand">XYZ Application</a>
     <div class="user-welcome ml-auto">
-      <img src="../../assets/images/user-photo.jpg" alt="user photo">
+      <img src="" alt="user photo">
       Welcome, User
     </div>
   </div>
@@ -53,7 +54,7 @@
 
 <!-- SITE CONTENT START -->
 <!-- Change the 'main-content' class from 'container' to 'container-fluid' for the content to span the width of the browser.  -->
-<!-- For more information about customizing see https://ui.sandia.gov/templates-->
+
 <div id="main-content" class="container">
   <h1>Page Title</h1>
   <div class="row">
@@ -82,7 +83,7 @@
 <!-- SITE CONTENT END -->
 
 <!-- SITE FOOTER START -->
-<!-- Optional. Add the class 'mega-menu' for a more complex site footer layout. See instructions at https://ui.sandia.gov/site-footer -->
+
 <footer class="site-footer">
   <div class="container-fluid">
     <div class="row">
