--- a/pathfinder/templates/two-col-left-sidebar.html
+++ b/pathfinder/templates/two-col-left-sidebar.html
@@ -4,13 +4,22 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <!-- CSS orders by specificty, but for same level, last defined takes precedence -->
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <!-- "Default" CSS for the project, overriding Bootstrap -->
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='tui.css') }}">
+
+  <!-- To use fontawesome for iconography -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+  {% block extra_css %}{% endblock extra_css %}
+
+
   <title>Thunderbird UI Two-Column Left Sidebar Template</title>
   
   <!-- removed links that wont work here -->
   
-  <link rel="stylesheet" href="style.css">
-
-  <!-- removed links that wont work here -->
 
 
   <!-- Thunderbird UI v3.3.0 Template-->
@@ -27,9 +36,10 @@
             aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a href="#" class="navbar-brand">XYZ Application</a>
+    <a href="#" class="navbar-brand">VTTRPG Helper</a>
     <div class="user-welcome ml-auto">
-      <img src="" alt="user photo">
+      <img class="rounded-circle account-img" src="{{ 'current_user.email' | gravatar }}" alt="user photo">
+      
       Welcome, User
     </div>
   </div>
