discord bot hook

--- a/pathfinder/templates/two-col-left-sidebar.html
+++ b/pathfinder/templates/two-col-left-sidebar.html
@@ -15,8 +15,10 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   {% block extra_css %}{% endblock extra_css %}
 
+  <!-- include a favicon -->
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
-  <title>Thunderbird UI Two-Column Left Sidebar Template</title>
+  <title>VTTRPG Helper</title>
   
   <!-- removed links that wont work here -->
   
